--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
 <div class="content">
     <router-outlet></router-outlet>
+    <p-toast [style]="{marginTop: '80px'}"></p-toast>
 </div>
