--- a/src/app/shared/login/login.component.css
+++ b/src/app/shared/login/login.component.css
@@ -1,7 +1,10 @@
 .login {
-    margin: 60px 1rem;
-    max-width: 400px;
+    margin: 5% auto;
+    padding: 20px;
+    max-width: 500px;
     text-align: center;
+    border: 0.5px solid #afafaf;
+    box-shadow: 10px 10px #d3d3d3;
 }
 .login .btn-login button {
     width: 25%;
