--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -49,13 +49,13 @@
         </div>
       </li>
     </ul>
-    <ul class="navbar-nav ">
+    <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" (click)="logout()">
           <i class="fa fa-bell">
             <span class="badge badge-info">11</span>
           </i>
-          Test
+          Sair
         </a>
       </li>
       <li class="nav-item">
@@ -78,10 +78,10 @@
               <i class="fa fa-envelope-o">
                 <span class="badge badge-primary">11</span>
               </i>
-              Dropdown
+              Perfil
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" (click)="logout()">Sair</a>
               <a class="dropdown-item" href="#">Another action</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
