--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 <div class="content">
     <router-outlet></router-outlet>
-    <p-toast [style]="{marginTop: '80px'}"></p-toast>
+    <p-growl [style]="{marginTop: '5%'}"></p-growl>
 </div>
