--- a/src/app/shared/home/home.component.css
+++ b/src/app/shared/home/home.component.css
@@ -1,3 +1,16 @@
-.home{
+.home {
     margin-top: 10px;
+    margin: 5% auto;
+    padding: 20px;
+    max-width: 500px;
+    text-align: center;
+    border: 0.5px solid #afafaf;
+    box-shadow: 10px 10px #d3d3d3;
+}
+.inicio {
+    text-align: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
 }
