--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,40 +1,7 @@
-<div class="home">
-
-  <p-accordion>
-    <p-accordionTab header="Salads">
-      Salads...
-    </p-accordionTab>
-    <p-accordionTab header="Pasta">
-      Pasta...
-    </p-accordionTab>
-    <p-accordionTab header="Pizza" [selected]="true">
-      <p-radioButton
-        label="Double cheese 🧀🧀"
-        name="pizza"
-        value="double-cheese"
-        [(ngModel)]="pizzaSelection">
-      </p-radioButton><br>
-  
-      <p-radioButton
-        label="Anchovy"
-        name="pizza"
-        value="anchovy"
-        [(ngModel)]="pizzaSelection">
-      </p-radioButton><br>
-  
-      <p-radioButton
-        label="Meat lover's 🍖"
-        name="pizza"
-        value="meat-lover"
-        [(ngModel)]="pizzaSelection">
-      </p-radioButton>
-    </p-accordionTab>
-  </p-accordion>
-  
-  <br>
-  
-  <p-panel header="Extras" *ngIf="pizzaSelection && pizzaSelection.length">
-    🍕 Would you like extra cheese on your pizza?
-    <button pButton type="button" label="Ok, yeah!"></button>
-  </p-panel>
+<div class="login elevation-box-1200">
+  <div class="ui-g ui-fluid">
+    <div class="inicio">
+      <h2>Bem vindo!</h2>
+     </div>
+  </div>
 </div>
