--- a/src/app/clientes/listar/listar.component.html
+++ b/src/app/clientes/listar/listar.component.html
@@ -1,3 +1,21 @@
-<p>
-  listar works!
-</p>
+<p-table [value]="clientes" [columns]="cols" [rows]="10" [paginator]="true">
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th *ngFor="let col of columns">
+                {{col.header}}
+            </th>
+            <th>Ação</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr>
+            <td *ngFor="let col of columns" style="text-align:center">
+                {{rowData[col.field]}}
+            </td>
+            <td style="text-align:center">
+                    <button pButton (click)="remove(rowData.documento)"><span class="fa fa-trash-o"></span></button>
+                    <button pButton (click)="remove(rowData.documento)"><span class="fa fa-edit"></span></button>
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
