--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <app-nav *ngIf="exibirMenu()"></app-nav>
 
-<div class="ui-g ui-fluid">
+<div class="ui-g ui-fluid container-workshop">
     <div class="ui-g-12">
-        <router-outlet></router-outlet>
-        <p-growl [style]="{marginTop: '5%'}"></p-growl>
+        <div class="ui-g-12 ui-md-10 ui-md-offset-1">
+            <div class="ui-g">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
 </div>
+<p-growl [style]="{marginTop: '5%'}"></p-growl>
