--- a/src/app/clientes/cadastro/cadastro.component.html
+++ b/src/app/clientes/cadastro/cadastro.component.html
@@ -1,23 +1,29 @@
-<p>
-  cadastro works!
-</p>
-<form id="formLogin" autocomplete="off" #formLogin="ngForm">
-        <div class="ui-g-12">
-            <h1>Faça seu Login:</h1>
-        </div>
-        <div class="ui-g-12">          
-          <span class="ui-float-label">
-            <input id="usuario" type="text" pInputText  name="usuario" [(ngModel)]="cliente.nome"> 
-            <label for="usuario">Usuario</label>
-          </span>
-        </div>
-        <div class="ui-g-12">
-          <span class="ui-float-label">
-            <input id="documento" pInputText type="text" name="documento" [(ngModel)]="cliente.documento">
-            <label for="documento">Documento</label>
-          </span>
-        </div>
-        <div class="btn-login ui-g-12">
-          <button id="btnLogin" pButton type="submit" label="Entrar" (click)="salvar()"></button>
-        </div>
-    </form>
+<!-- <div class="ui-g-12"> -->
+<div class="ui-g-12 ui-fluid">
+  <div class="ui-g-12 ui-md-4">
+    <h3 class="first">Nome Cliente</h3>
+    <div class="ui-inputgroup">
+      <span class="ui-inputgroup-addon"><i class="fa fa-user"></i></span>
+      <input type="text" pInputText placeholder="Nome Cliente" [(ngModel)]="cliente.nome">
+    </div>
+  </div>
+  <div class="ui-g-12 ui-md-4">
+    <h3 class="first">Documento Cliente</h3>
+    <div class="ui-inputgroup">
+      <span class="ui-inputgroup-addon"><i class="fa fa-drivers-license"></i></span>
+      <input type="text" pInputText placeholder="Documento CPF/CNPJ" [(ngModel)]="cliente.documento">
+    </div>
+  </div>
+  <div class="ui-g-12 ui-md-4">
+    <h3 class="first">Data de Nascimento</h3>
+    <div class="ui-inputgroup">
+      <span class="ui-inputgroup-addon"><i class="fa fa-calendar"></i></span>
+      <p-calendar [(ngModel)]="dataNascimento"  placeholder="Data de Nascimento" dateFormat="dd/mm/yy"></p-calendar>
+    </div>
+  </div>
+</div>
+<div class="btn-login ui-g-12">
+  <p-button [routerLink]="['/clientes']" label="Voltar" icon="fa fa-reply" iconPos="right"  style="margin-right: 1px"></p-button>
+  <p-button label="Salvar" (click)="salvar()" icon="pi pi-check" iconPos="right"></p-button>
+</div>
+<!-- </div> -->
