--- a/src/app/clientes/listar/listar.component.html
+++ b/src/app/clientes/listar/listar.component.html
@@ -1,21 +1,38 @@
-<p-table [value]="clientes" [columns]="cols" [rows]="10" [paginator]="true">
-    <ng-template pTemplate="header" let-columns>
-        <tr>
-            <th *ngFor="let col of columns">
-                {{col.header}}
-            </th>
-            <th>Ação</th>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-        <tr>
-            <td *ngFor="let col of columns" style="text-align:center">
-                {{rowData[col.field]}}
-            </td>
-            <td style="text-align:center">
-                    <button pButton (click)="remove(rowData.documento)"><span class="fa fa-trash-o"></span></button>
-                    <button pButton (click)="remove(rowData.documento)"><span class="fa fa-edit"></span></button>
-            </td>
-        </tr>
-    </ng-template>
-</p-table>
+<div class="ui-g-12">
+
+    <div class="ui-g-10">
+        <p-button [routerLink]="['cadastrar']" label="Novo Cliente" icon="pi pi-plus" iconPos="right"></p-button>
+    </div>
+
+    <div class="ui-g-10">
+        <p-table [value]="clientes" [columns]="cols" [rows]="10" [paginator]="true" styleClass="my-table">
+            <ng-template pTemplate="header" let-columns>
+                <tr>
+                    <th *ngFor="let col of columns">
+                        {{col.header}}
+                    </th>
+                    <th>Ação</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+                <tr>
+                    <td *ngFor="let col of columns" style="text-align:center">
+                        {{rowData[col.field]}}
+                    </td>
+                    <td style="text-align:center">
+                        <p-button (click)="remove(rowData.documento)" icon="pi pi-trash" style="padding-right: 1px"></p-button>
+
+                        <p-button [routerLink]="['cadastrar',rowData.codigoCliente]" icon="pi pi-pencil"></p-button>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage" let-columns>
+                <tr>
+                    <td [attr.colspan]="columns.length + 1" style="text-align:center">
+                        Nenhum registro encontrado
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
