--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,7 +1,5 @@
-<div class="login elevation-box-1200">
-  <div class="ui-g ui-fluid">
-    <div class="inicio">
-      <h2>Bem vindo!</h2>
-     </div>
+<div class="home">
+  <div class="inicio">
+    <h3>Seja bem vindo!</h3>
   </div>
 </div>
