--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -14,7 +14,7 @@
     [ngStyle]="{'display': toggleMenu ?'block' : 'none'}">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active" *ngFor="let menu of items">
-        <a class="nav-link" [routerLink]="menu.routerLink">
+        <a class="nav-link" [routerLink]="menu.routerLink" *ngIf="menu.visible">
           <i [class]="menu.icon"></i>
           {{menu.label}}
           <span class="sr-only">(current)</span>
