adequação valor venda

--- a/src/app/vendas/consulta-vendas/consulta-vendas.component.html
+++ b/src/app/vendas/consulta-vendas/consulta-vendas.component.html
@@ -12,7 +12,7 @@
       <ng-template pTemplate="header">
         <tr>
           <th>#</th>
-          <th>Preço</th>
+          <th>Valor Venda</th>
           <th>Data Venda</th>
           <th>Cliente</th>
           <th>Veículo</th>
