--- a/src/app/vendas/cadastro-venda/cadastro-venda.component.html
+++ b/src/app/vendas/cadastro-venda/cadastro-venda.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="ui-g-12">
     <div class="ui-g-12 ui-md-3">
-      <h3 class="first">Preço da Venda</h3>
+      <h3 class="first">Valor Venda</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-drivers-license"></i></span>
         <input type="text" pInputText placeholder="Preço da Venda" [(ngModel)]="venda.precoVenda">
