Exercício final - crud com HttpClient

--- a/src/app/veiculos/cadastro-veiculo/cadastro-veiculo.component.html
+++ b/src/app/veiculos/cadastro-veiculo/cadastro-veiculo.component.html
@@ -9,21 +9,21 @@
       <h3 class="first">Marca</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-drivers-license"></i></span>
-        <input type="text" pInputText placeholder="Marca" [(ngModel)]="veiculo.marca">
+        <input type="text" pInputText placeholder="Marca">
       </div>
     </div>
     <div class="ui-g-12 ui-md-4">
       <h3 class="first">Modelo</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-calendar"></i></span>
-        <input type="text" pInputText placeholder="Modelo" [(ngModel)]="veiculo.modelo">
+        <input type="text" pInputText placeholder="Modelo">
       </div>
     </div>
     <div class="ui-g-12 ui-md-4">
       <h3 class="first">Placa</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-users"></i></span>
-        <input type="text" pInputText placeholder="Placa" [(ngModel)]="veiculo.placa">
+        <input type="text" pInputText placeholder="Placa">
       </div>
     </div>
   </div>
@@ -32,21 +32,21 @@
       <h3 class="first">Preço</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-car"></i></span>
-        <input type="text" pInputText placeholder="Preço" [(ngModel)]="veiculo.preco">
+        <input type="text" pInputText placeholder="Preço">
       </div>
     </div>
     <div class="ui-g-12 ui-md-4">
       <h3 class="first">Percentual Desconto</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-users"></i></span>
-        <input type="text" pInputText placeholder="Percentual de Desconto" [(ngModel)]="veiculo.percentualDesconto">
+        <input type="text" pInputText placeholder="Percentual de Desconto">
       </div>
     </div>
     <div class="ui-g-12 ui-md-4">
       <h3 class="first">Ano</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-users"></i></span>
-        <input type="text" pInputText placeholder="Ano" [(ngModel)]="veiculo.ano">
+        <input type="text" pInputText placeholder="Ano">
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
       <h3 class="first">Motor</h3>
       <div class="ui-inputgroup">
         <span class="ui-inputgroup-addon"><i class="fa fa-users"></i></span>
-        <input type="text" pInputText placeholder="Motor" [(ngModel)]="veiculo.motor">
+        <input type="text" pInputText placeholder="Motor">
       </div>
     </div>
   </div>
