--- a/src/app/veiculos/consulta-veiculo/consulta-veiculo.component.html
+++ b/src/app/veiculos/consulta-veiculo/consulta-veiculo.component.html
@@ -1,6 +1,6 @@
 <div class="ui-g-12">
     <div class="jumbotron text-center">
-        <h1>CONSULTA DE VEÍCLOS</h1>
+        <h1>CONSULTA DE VEÍCULOS</h1>
     </div>
     <div class="ui-g-10">
         <p-button [routerLink]="['cadastrar']" label="Novo Veículo" icon="pi pi-plus" iconPos="right"></p-button>
