--- a/src/app/veiculos/cadastro-veiculo/cadastro-veiculo.component.html
+++ b/src/app/veiculos/cadastro-veiculo/cadastro-veiculo.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g-12 ui-fluid">
 
   <div class="jumbotron text-center">
-    <h1>{{codigo !== undefined ? 'EDIÇÃO' : 'CADASTRO'}} DE VEÍCLOS</h1>
+    <h1>{{codigo !== undefined ? 'EDIÇÃO' : 'CADASTRO'}} DE VEÍCULOS</h1>
   </div>
   <div class="ui-g-12">
 
